# TestRenderer

./: CMakeLists.txt  README.md  main.cpp
Asset/: anisoMipMapBase.comp  anisoMipMapBaseComp.data  anisoMipMapBaseComp.spv  anisoMipMapVolume.comp  anisoMipMapVolumeComp.data  anisoMipMapVolumeComp.spv  averageVoxelMap.comp  averageVoxelMapComp.data  averageVoxelMapComp.spv  clearVoxelMap.comp  clearVoxelMapComp.data  clearVoxelMapComp.spv  common.glsl  compile.bat  evsmDepth.frag  evsmDepth.vert  evsmDepthFrag.data  evsmDepthFrag.spv  evsmDepthVert.data  evsmDepthVert.spv  gaussianBlur.frag  gaussianBlurFrag.data  gaussianBlurFrag.spv  injectRadiance.comp  injectRadianceComp.data  injectRadianceComp.spv  light.frag  light.vert  lightFrag.data  lightFrag.spv  lightVert.data  lightVert.spv  quad.vert  quadVert.data  quadVert.spv  renderVoxel.frag  renderVoxel.geom  renderVoxel.vert  renderVoxelFrag.data  renderVoxelFrag.spv  (+22 more)
Asset/Dst/: Cornell.data  black.data  red.data
Asset/Dst/Scene/crytek-sponza/res/Texture/sponza/textures/: chain_texture.data  chain_texture_ddn.data  chain_texture_mask.data  spnza_bricks_a_spec.data  sponza_arch_spec.data  sponza_ceiling_a_spec.data  sponza_column_a_spec.data  sponza_column_b_spec.data  sponza_column_c_spec.data  sponza_details_spec.data  sponza_fabric_spec.data  sponza_flagpole_spec.data  sponza_floor_a_spec.data  sponza_thorn_ddn.data  sponza_thorn_diff.data  sponza_thorn_mask.data  sponza_thorn_spec.data  vase_plant_spec.data  vase_round_spec.data
Asset/Src/: Cornell.fbx
AssetImporter/: AssetImporter.h  CMakeLists.txt  ImportAsset.h  ImportSPIRVShaderData.h  ImportSceneData.h  ImportTextureData.h  ModelImporter.cpp  ModelImporter.h  SOURCE_LIST  SPIRVImporter.cpp  SPIRVImporter.h  TextureImporter.cpp  TextureImporter.h  main.cpp
Images/: SDFShadow.pptx
PathTracer/: CMakeLists.txt  CustomNode.cpp  CustomNode.h  main.cpp
PathTracer/GraphicsAPICommon/: GraphicsInterface.h  GraphicsStructure.h
PathTracer/Vulkan/: Buffer.cpp  Buffer.h  CommandBufferPool.cpp  CommandBufferPool.h  ComputePass.cpp  ComputePass.h  Device.cpp  Device.h  Image.cpp  Image.h  ImageView.cpp  ImageView.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  PresentEngine.cpp  PresentEngine.h  RenderPass.cpp  RenderPass.h  RenderingPipeline.cpp  RenderingPipeline.h  ResourceCreator.cpp  ResourceCreator.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  SwapChain.cpp  SwapChain.h  TranslateEngine.cpp  TranslateEngine.h  VulkanAttachment.cpp  VulkanAttachment.h  VulkanCommon.cpp  VulkanCommon.h  Window.cpp  Window.h  WorldObject.cpp  WorldObject.h
PathTracer/WorldCommon/: Camera.cpp  Camera.h  Light.cpp  Light.h  World.cpp  World.h  WorldObject.cpp  WorldObject.h
Source/: BVH.cpp  BVH.h  FileHelper.h  Geometry.h  Light.h  OutputImageHelper.h  OutputInformationHelper.h  PathHelper.h  Prefix.h  Rasterize.h  StaticLighting.h  StaticLightingData.h
