CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(OfflineRenderer)
# project variables
MESSAGE(STATUS "platform: ${CMAKE_SYSTEM_NAME}")
if (UNIX AND NOT APPLE)
    MESSAGE(STATUS "unix")
elseif (WIN32)
elseif (APPLE)
    include_directories(./External/Vulkan/macos/include)
    link_directories(./External/Vulkan/macos/lib)
    include_directories(./External/Glfw/macos/include)
    link_directories(./External/Glfw/macos/lib)
    include_directories(./External/glm)
    AUX_SOURCE_DIRECTORY(. SRC_LIST)
    ADD_EXECUTABLE(hello ${SRC_LIST})
    TARGET_LINK_LIBRARIES(hello libvulkan.1.dylib)
    TARGET_LINK_LIBRARIES(hello libvulkan.1.1.108.dylib)
    TARGET_LINK_LIBRARIES(hello libglfw.3.dylib)
    MESSAGE(STATUS "mac os")
else ()
    MESSAGE(STATUS "other platform")
endif ()

